# everscale-asm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: master.yaml
asm/: Cargo.toml
asm/src/: ast.rs  lib.rs  util.rs
asm/src/asm/: mod.rs  opcodes.rs  util.rs
asm/src/tests/: example.tvm  walletv3.tvm
cli/: Cargo.toml
cli/src/: lsp.rs  main.rs  util.rs
extension/: bun.lockb  package.json
lsp-client/: package.json
lsp-client/src/: extension.ts
lsp-client/syntaxes/: tvm.tmLanguage.json
lsp-server/: Cargo.toml
lsp-server/src/: backend.rs  main.rs  util.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: asm.pest  ast.rs  ast2.rs  lib.rs  util.rs
src/asm/: mod.rs  opcodes.rs  util.rs
src/tests/: example.tvm  walletv3.tvm
vscode-extension/: language-configuration.json  package.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: tvm.tmLanguage.json
