[workspace.package]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/broxus/tycho-asm"
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = ["cli", "macros", "asm"]

[workspace.dependencies]
ahash = "0.8"
anyhow = "1.0"
argh = "0.1"
async-trait = "0.1"
base64 = "0.22.1"
chumsky = "0.10.1"
console = "0.15"
dashmap = "6.1"
either = "1.9"
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
serde_json = "1.0"
syn = "2.0"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-std"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"

tycho-types = { version = "0.2.0", default-features = false }
