[package]
name = "tycho-asm"
version = "0.1.1"
description = "Rust implementation of TVM Assembler"
include = ["src/**/*.rs", "src/**/*.tvm", "./LICENSE-*", "./README.md"]
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
chumsky = { workspace = true }
either = { workspace = true }
hex = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
tycho-types = { workspace = true, features = ["base64"] }
