[package]
name = "tvmasm"
description = "CLI for TVM Assembler"
repository = "https://github.com/broxus/everscale-asm"
version = "0.0.7"
edition = "2021"
rust-version = "1.70"
include = ["src/**/*.rs", "src/**/*.tvm", "./LICENSE-*", "./README.md"]
license = "MIT OR Apache-2.0"

[dependencies]
ahash = "0.8"
anyhow = "1.0"
argh = "0.1"
async-trait = "0.1"
console = "0.15"
dashmap = "5.5"
either = "1.9"
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-std"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.1"

everscale-types = { version = "0.1.0-rc.6", default-features = false, features = ["sync"] }
everscale-asm = { path = "../", version = "=0.0.6" }
