[package]
name = "tvmasm"
version = "0.0.9"
description = "CLI for TVM Assembler"
include = ["src/**/*.rs", "src/**/*.tvm", "./LICENSE-*", "./README.md"]
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
argh = { workspace = true }
async-trait = { workspace = true }
console = { workspace = true }
dashmap = { workspace = true }
either = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-lsp = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-width = { workspace = true }
everscale-types = { workspace = true, features = ["sync"] }

everscale-asm = { path = "../asm", version = "0.0.9" }
