[package]
name = "tvm-lsp-server"
description = "LSP server for the Rust implementation of TVM Assembler"
repository = "https://github.com/broxus/everscale-asm"
version = "0.0.3"
edition = "2021"
rust-version = "1.70"
include = ["src/**/*.rs", "src/**/*.tvm", "./LICENSE-*", "./README.md"]
license = "MIT OR Apache-2.0"

[dependencies]
ahash = "0.8"
anyhow = "1.0"
async-trait = "0.1"
dashmap = "5.5"
either = "1.9"
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-std"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

everscale-asm = { path = "../", version = "0.0.3" }
