[package]
name = "everscale-asm-macros"
version = "0.0.8"
description = "Macros for Rust implementation of TVM Assembler"
include = ["src/**/*.rs", "src/**/*.tvm", "./LICENSE-*", "./README.md"]
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
everscale-types = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["parsing"] }

everscale-asm = { path = "../asm", version = "0.0.8" }
