[package]
name = "tycho-asm-macros"
version = "0.1.1"
description = "Macros for Rust implementation of TVM Assembler"
include = ["src/**/*.rs", "src/**/*.tvm", "./LICENSE-*", "./README.md"]
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["parsing"] }
tycho-types = { workspace = true }

tycho-asm = { path = "../asm", version = "0.1.1" }
